<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.gorrotowi.parkemeter.RegisterActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <com.gorrotowi.parkemeter.customelements.TextViewBariol
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/register"
            android:textColor="@color/icons"
            android:textSize="18sp"
            app:font_type="bold" />

        <ImageView
            android:id="@+id/imgToolbarHeader"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:contentDescription="@string/hello_world"
            android:scaleType="centerCrop"
            android:src="@drawable/header_toolbar" />

        <ImageView
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_below="@+id/imgToolbarHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-50dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/user_circle" />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollRegisterFormData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRegisterNext"
        android:layout_below="@+id/relativeLayout"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.gorrotowi.parkemeter.customelements.EditTextBariol
                    android:id="@+id/edtxRegisterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.gorrotowi.parkemeter.customelements.EditTextBariol
                    android:id="@+id/edtxRegisterMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.gorrotowi.parkemeter.customelements.EditTextBariol
                    android:id="@+id/edtxRegisterPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.gorrotowi.parkemeter.customelements.EditTextBariol
                    android:id="@+id/edtxRegisterPassConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passconfirm"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.gorrotowi.parkemeter.customelements.EditTextBariol
                    android:id="@+id/edtxRegisterMatricula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/matricula"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <com.gorrotowi.parkemeter.customelements.EditTextBariol
                        android:id="@+id/edtxRegisterCountryCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/country_code"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="@string/mx_code" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.gorrotowi.parkemeter.customelements.EditTextBariol
                        android:id="@+id/edtxRegisterPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.gorrotowi.parkemeter.customelements.ButtonBariol
        android:id="@+id/btnRegisterNext"
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/teal"
        android:onClick="nexRegister"
        android:text="@string/next"
        android:textColor="@color/blank_transparent"
        android:textSize="26sp"
        app:font_type="bold" />

</RelativeLayout>
