<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gorrotowi.parkemeter.PaymentMethod">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <com.gorrotowi.parkemeter.customelements.TextViewBariol
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/pay_method"
            android:textColor="@color/icons"
            android:textSize="18sp"
            app:font_type="bold" />

        <ImageView
            android:id="@+id/imgToolbarHeader"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:contentDescription="@string/hello_world"
            android:scaleType="centerCrop"
            android:src="@drawable/header_toolbar" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_below="@+id/imgToolbarHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-40dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/minicard" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPaymentMethodNext"
        android:layout_below="@+id/relativeLayout"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.gorrotowi.parkemeter.customelements.TextViewBariol
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pay_more_easy"
                android:textColor="@color/primary"
                android:textSize="14sp"
                app:font_type="thin" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:contentDescription="@string/hello_world"
                android:src="@drawable/masterpassicon" />

            <com.gorrotowi.parkemeter.customelements.TextViewBariol
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ingress_card"
                android:textColor="@color/primary"
                android:textSize="14sp"
                app:font_type="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.gorrotowi.parkemeter.customelements.EditTextBariol
                    android:id="@+id/edtxPaymentMethodNumberCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_of_card"
                    android:inputType="number"
                    android:maxLength="16"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <com.gorrotowi.parkemeter.customelements.EditTextBariol
                        android:id="@+id/edtxPaymentMethodMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="12367890"
                        android:hint="@string/month"
                        android:inputType="numberDecimal"
                        android:maxLength="2"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <com.gorrotowi.parkemeter.customelements.EditTextBariol
                        android:id="@+id/edtxPaymentMethodYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="12367890"
                        android:hint="@string/year"
                        android:inputType="numberDecimal"
                        android:maxLength="2"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <com.gorrotowi.parkemeter.customelements.EditTextBariol
                        android:id="@+id/edtxPaymentMethodCVV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="12367890"
                        android:hint="@string/cvv"
                        android:inputType="numberDecimal"
                        android:maxLength="3"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <com.gorrotowi.parkemeter.customelements.ButtonBariol
        android:id="@+id/btnPaymentMethodNext"
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/teal"
        android:onClick="registerUser"
        android:text="@string/next"
        android:textColor="@color/blank_transparent"
        android:textSize="26sp"
        app:font_type="bold" />

</RelativeLayout>
