<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgSplash"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/abc_btn_check_material" />

    <com.gorrotowi.parkemeter.customelements.TextViewBariol
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgSplash"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textColor="@color/icons"
        android:textSize="24sp"
        app:font_type="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/icons"
        android:orientation="horizontal">

        <com.gorrotowi.parkemeter.customelements.ButtonBariol
            android:id="@+id/btnSplashRegister"
            style="?attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="registerActivity"
            android:text="@string/register" />

        <com.gorrotowi.parkemeter.customelements.ButtonBariol
            android:id="@+id/btnSplashLogin"
            style="?attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/login" />

    </LinearLayout>

</RelativeLayout>
